--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -26,6 +26,16 @@
                 <span class="oi oi-people" aria-hidden="true"></span> Employees
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+    <NavLink class="nav-link" href="assignasset">
+        <span class="oi oi-share" aria-hidden="true"></span> Assign Asset
+    </NavLink>
+</div>
+<div class="nav-item px-3">
+    <NavLink class="nav-link" href="activeassignments">
+        <span class="oi oi-spreadsheet" aria-hidden="true"></span> Active Assignments
+    </NavLink>
+</div>
         
     </nav>
 </div>
