Feat: Asset assignment functionality added

--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -33,6 +33,14 @@
             </NavLink>
         </div>
         
+        
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="activeassignments">
+                <span class="oi oi-book" aria-hidden="true"></span> Active Assignments
+            </NavLink>
+        </div>
+   
+        
     </nav>
 </div>
 
