--- a/Components/Pages/EmployeeList.razor
+++ b/Components/Pages/EmployeeList.razor
@@ -68,7 +68,7 @@ else
         if (await JSRuntime.InvokeAsync<bool>("confirm", "Are you sure you want to delete this employee?"))
         {
             await EmployeeService.DeleteEmployeeAsync(id);
-            await LoadEmployees(); // Refresh the list
+            await LoadEmployees(); 
         }
     }
 }
