--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using AssetManagementApp
 @using AssetManagementApp.Components
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Authorization
