--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -20,7 +20,13 @@
                 <div class="nav-item px-3">
                     <NavLink class="nav-link" href="activeassignments">Active Assignments</NavLink>
                 </div>
-            </nav>
+                
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="logout">
+                        <span class="oi oi-account-logout" aria-hidden="true"></span> Logout
+                    </NavLink>
+                </div>
+                </nav>
         </div>
     </Authorized>
     <NotAuthorized>
